@@ -1,1 +1,1 @@
-(setf (get :maxima :version) (quote ( 5 5 "Fri Apr 20 14:03:28 CDT 2001" )))
+(setf (get :maxima :version) (quote ( 5 5 "Fri Apr 20 17:35:42 CDT 2001" )))
