@@ -185,7 +185,8 @@ Additionally there are examples so that you may do
 example(integrate);
 (C4) example(integrate);
 (C5) test(f):=BLOCK([u],u:INTEGRATE(f,x),RATSIMP(f-DIFF(u,x)))
-(D5)  test(f) := BLOCK([u], u : INTEGRATE(f, x), RATSIMP(f - DIFF(u, x)))
+(D5) test(f) := BLOCK([u], u :
+         INTEGRATE(f, x), RATSIMP(f - DIFF(u, x)))
 (C6) test(SIN(x))
 (D6) 						       0
 (C7) test(1/(x+1))
